the link was styled

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
                 <ul class="latest-videos-list">
                     <li class="latest-videos-iteam">
-                        <div class="iteam-latest-videos">
                             <img class="iteam-latest-videos-img" src="img/home-poster.jpg" alt="home" width="160" height="90" srcset="img/home-poster.jpg 1x, img/home-poster@2x.jpg 2x">
                             <div class="iteam-latest-videos-info">
                                 <h3 class="iteam-latest-videos-heading">
@@ -55,11 +54,9 @@
                                         <div class="iteam-latest-videos-views">873 ming</div>
                                     </div>
                             </div>
-                        </div>
                     </li>
 
                     <li class="latest-videos-iteam">
-                        <div class="iteam-latest-videos">
                             <img class="iteam-latest-videos-img" src="img/lake-poster.jpg" alt="lake" width="160" height="90" srcset="img/lake-poster.jpg 1x, img/lake-poster@2x.jpg 2x">
                             <div class="iteam-latest-videos-info">
                                 <h3 class="iteam-latest-videos-heading">
@@ -70,11 +67,9 @@
                                         <div class="iteam-latest-videos-views">819 ming</div>
                                     </div>
                             </div>
-                        </div>
                     </li>
 
                     <li class="latest-videos-iteam">
-                        <div class="iteam-latest-videos">
                             <img class="iteam-latest-videos-img" src="img/travel-poster.jpg" alt="travel" width="160" height="90" srcset="img/travel-poster.jpg 1x, img/travel-poster@2x.jpg 2x">
                             <div class="iteam-latest-videos-info">
                                 <h3 class="iteam-latest-videos-heading">
@@ -85,8 +80,10 @@
                                         <div class="iteam-latest-videos-views">3.9 million</div>
                                     </div>
                             </div>
-                        </div>
                     </li>
+                    <div class="latest-videos-link">
+                        <a class="latest-videos-link-reolad" href="#">Yana yuklash</a>
+                    </div>
                 </ul>
 
             </section>
